--- a/src/App.scss
+++ b/src/App.scss
@@ -134,6 +134,7 @@ main {
 		.match {
 			padding: 1rem 2.25rem;
 			background-color: var(--match-background);
+			gap: 12px;
 
 			&__team {
 				gap: 14px;
